package eapli.base.surveymanagement.dto;

/**
 * Author: 1201180 - Guilherme Sencadas
 */

public class SurveyDTO {

    public Long id;
    public String toString;

    public SurveyDTO(Long id,String toString){
        this.id=id;
        this.toString = toString;
    }
}
